# -EAG_V3-Assignments

Session10Assignment/: .gitignore  README.md  assignment.md
Session10Assignment/code/: agent_config.yaml  flow.py  gateway.py  index.html  mcp_runner.py  mcp_server.py  recorder.py  run_all_session10_verifications.py  session10_verification_report.md  skills.py  trigger_session10_queries.py  usage.json
Session10Assignment/gateway/: agent_routing.yaml  client.py
Session2Assignment/: AuraAI_Submission.md  app.js  background.js  content.js  manifest.json  sidepanel.html  style.css
Session3Assignment/ai-stock-agent/: agent.js  api.js  gemini.js  manifest.json  popup.html  popup.js  style.css
Session4Assignment/: .gitignore  agent.js  demo_logs.txt  mcp_server.js  package.json  test_key.js  ui_server.js
Session4Assignment/public/: app.js  index.html  style.css
Session5Assignment/: .gitignore  README.md  app.py  main.py  prompt_evaluator.py  prompts.py  puzzles.py  requirements.txt  solver.py
Session5Assignment/webapp/: package-lock.json  package.json
Session6Assignment/: .env.example  .gitignore  README.md  action.py  clean.py  decision.py  mcp_server.py  pyproject.toml  record_demo.py
Session6Assignment/llm_gatewayV3/: client.py  main.py  providers.py
Session7Assignment/: README.md  agent6.py  agent7.py  compile_readme.py  decision.py  mcp_server.py  memory.py  perception.py  pyproject.toml  retriever.py  run_all_traces.py  schemas.py  vector_db.py
Session7Assignment/papers/: attention.md  (+2 more)
Session8Assignment/: README.md
Session9Assignment/: README.md
(+65 files in other folders)
